Return logged in person info after authenticating
Remove test `/me` route
